DESIGN QA: fixes collapsed margin on form-field

--- a/assets/sass/1_atoms/_forms.scss
+++ b/assets/sass/1_atoms/_forms.scss
@@ -342,6 +342,7 @@ form, .form {
 
     .form-field {
         margin-top: $base-spacing;
+        overflow: auto;
     }
 }
 
